--- a/firefox-theme-changer.desktop
+++ b/firefox-theme-changer.desktop
@@ -3,7 +3,7 @@ Categories=System;Settings;Security;X-GNOME-Settings-Panel;X-GNOME-SystemSetting
 Comment=Firefox theme changer
 Exec=firefox-theme-changer
 Icon=firefox
-Name=RamallahOS Welcome
+Name=Firefox theme changer
 GenericName=Firefox theme changer
 StartupNotify=true
 Terminal=false
